-- Up to you — ledger cluster: ingest runs and the retrieval crib
-- Generated by docs/diagrams/er_schema.py from pg_dump. Do not edit.
CREATE TABLE ingest_run (
    id bigint NOT NULL,
    source text NOT NULL,
    started_at timestamp with time zone NOT NULL,
    outcome text NOT NULL,
    rows_written integer DEFAULT 0 NOT NULL,
    invoked_by text,
    forecast_publication_id bigint,
    observation_publication_id bigint,
    place_publication_id bigint,
    brand_publication_id bigint,
    storefront_publication_id bigint,
    business_status_publication_id bigint,
    business_tax_publication_id bigint,
    PRIMARY KEY (id),
    FOREIGN KEY (brand_publication_id) REFERENCES brand_publication(id),
    FOREIGN KEY (business_status_publication_id) REFERENCES business_status_publication(id),
    FOREIGN KEY (business_tax_publication_id) REFERENCES business_tax_publication(id),
    FOREIGN KEY (storefront_publication_id) REFERENCES storefront_publication(id),
    FOREIGN KEY (forecast_publication_id) REFERENCES forecast_publication(id),
    FOREIGN KEY (observation_publication_id) REFERENCES observation_publication(id),
    FOREIGN KEY (place_publication_id) REFERENCES place_publication(id)
);
CREATE TABLE example_embedding (
    id bigint NOT NULL,
    name text NOT NULL,
    label text NOT NULL,
    labeled_by text NOT NULL,
    layer text NOT NULL,
    embed_model text NOT NULL,
    source_digest character(64) NOT NULL,
    embedding public.vector(1024) NOT NULL,
    source text NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE metric_history (
    id bigint NOT NULL,
    source text NOT NULL,
    metric text NOT NULL,
    observed_at timestamp with time zone DEFAULT now() NOT NULL,
    value double precision,
    threshold double precision,
    verdict text NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE forecast_publication (
    id bigint NOT NULL,
    dataset_id text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE observation_publication (
    id bigint NOT NULL,
    dataset_id text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    PRIMARY KEY (id)
);
CREATE TABLE place_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    archive_stamp timestamp with time zone,
    detected_at timestamp with time zone NOT NULL,
    place_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE brand_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    pair_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE storefront_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    name_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE business_status_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    status_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE business_tax_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    file_stamp date,
    detected_at timestamp with time zone NOT NULL,
    tax_rows integer,
    PRIMARY KEY (id)
);
